fix(be): enhance ticket purchase process by updating event reference and adding transactional support for status updates